[package]
name = "ave"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[features]
default = []

[dependencies]
structopt = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
crossbeam-channel = "0.2"

av-data = "0.1"
av-codec = "0.1"
av-format = "0.1"

libvpx = { git = "https://github.com/rust-av/vpx-rs", features=["codec-trait"] }
libopus = { git = "https://github.com/rust-av/opus-rs", features=["codec-trait"] }
libaom = { git = "https://github.com/rust-av/aom-rs", features=["codec-trait"] }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
rav1e-av = { git = "https://github.com/rust-av/rav1e-av" }

matroska = { git = "https://github.com/rust-av/matroska" }
