[package]
name = "ave"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[features]
default = []

[dependencies]
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
crossbeam-channel = "0.3"

av-data = "0.1"
av-codec = "0.1"
av-format = "0.2"

libvpx = { git = "https://github.com/rust-av/vpx-rs", features=["codec-trait"] }
libopus = { git = "https://github.com/rust-av/opus-rs", features=["codec-trait"] }
libaom = { git = "https://github.com/rust-av/aom-rs", features=["codec-trait"] }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
ivf = { git = "https://github.com/rust-av/ivf-rs"}

matroska = { git = "https://github.com/rust-av/matroska" }
